--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -9,21 +9,18 @@ html, body {
 	margin: 0;
 	padding: 0;
 	cursor: none;
-	font-family: Arial, Helvetica, sans-serif
+	font-family: Arial, Helvetica, sans-serif;
+	/* display: block; */
 }
 
-html {
-	width: 100%;
-	height: 100%;
-	background-color: #000;
-    display: block;
-    position: relative;
-} 
-
-body {
+#screen {
+	background-color: aquamarine;
+	/* display: block; */
 	width: 1920px;
 	height: 1080px;
-    position: absolute;
+
+	/* transform: scale(0.5);
+	transform-origin: 50% 50%; */
 }
 
 .house {
