--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: 'Old Computer';
+	src: url('./OldcomputerSt.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'Rick and Morty';
+	src: url('./get_schwifty.ttf') format('truetype');
+}
+
 html, body {
 	width: 100%;
 	height: 100%;
