switched to node, added new layout, still missing 2 pumps

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -15,7 +15,7 @@ html, body {
 
 #screen {
 	position: absolute;
-	background-color: firebrick;
+	background-color: black;
 	width: 1920px;
 	height: 1080px;
 }
