--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -23,9 +23,8 @@ html, body {
 #app {
 	display: block;
 	position: absolute;
-	width: 1080px;
-	height: 1080px;
-	left: 420px;
+	width: 100%;
+	height: 100%;
 }
 
 .visible {
@@ -43,4 +42,45 @@ html, body {
 	height: 1080px;
     /* left: 420px; */
 	visibility: visible;
+}
+
+.area {
+	display: block;
+	position: relative;	
+}
+
+.top {
+	height: 15%;
+	background-color: rgb(100, 100, 100);
+}
+
+.content {
+	height: 70%;
+	background-color: 0;
+}
+
+.bottom {
+	height: 15%;
+	background-color: lightgray;
+}
+
+.top .chatgpt-logo-wide {
+	position: absolute;
+	left:15%;
+	top:15%;
+}
+
+.top .title {
+	position: absolute;
+	left:38%;
+	top:-2%;
+	color: white;
+	font-size: 400%;
+}
+
+.top .cocktail {
+	position: absolute;
+	left:78%;
+	top:2%;
+	width: 8%;
 }
