--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -10,13 +10,13 @@ html, body {
 	text-align: center;
 	margin: 0;
 	padding: 0;
-	cursor: none;
+	/* cursor: none; */
 	user-select: none;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
 #screen {
-	position: absolute;
+	/* position: absolute; */
 	background-color: black;
 	width: 1920px;
 	height: 1080px;
@@ -24,7 +24,7 @@ html, body {
 
 #app {
 	display: block;
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 100%;
 }
@@ -65,7 +65,7 @@ html, body {
 
 .bottom {
 	height: 15%;
-	background-color: lightgray;
+	background-color: rgb(100, 100, 100);
 }
 
 /* ----- top  area ----- */
@@ -93,6 +93,67 @@ html, body {
 
 /* ----- content area ----- */
 
+.content .step1 {
+	position: absolute;
+	width: 80%;
+	top: 20%;
+	left: 10%;
+	text-align: left;
+}
+
+.content .step2 {
+	position: absolute;
+	width: 80%;
+	top: 50%;
+	left: 10%;
+	text-align: left;
+}
+
+.content h1 {
+	color: white;
+	font-size: 500%;
+	top: 50%;
+	display:inline;
+}
+
 .content .cup {
+	top: 50%;
+	width: 7.5%;
+}
+
+.content .openai-button {
+	top: 50%;
+	width: 8%;
+}
+
+.content .no-alcohol-button {
+	top: 50%;
+	width: 8%;
+}
+
+.content .screen2 {
+	height: 100%;
+}
+
+.content .screen2 .logo, .content .screen2a .logo {
+	position: absolute;
+	top: 25%;
+	left: 10%;
 	width: 20%;
+}
+
+.content .screen2 h1, .content .screen2a h1 {
+	position: absolute;
+	top: 30%;
+	left: 35%;
+	text-align: left;
+}
+
+/* ----- bottom  area ----- */
+
+.bottom h1 {
+	color: white;
+	font-size: 380%;
+	top: 50%;
+	margin-top: 0%;
 }
