--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -168,9 +168,14 @@ html, body {
 
 /* ----- screen 4 ----- */
 
+.content .screen4 .logo-wrapper{
+	perspective: 2000px; 
+	padding-top: 35%;
+}
+
 .content .screen4 .logo {
 	position: absolute;
-	top: 10%;
+	top: 20%;
 	left: 8%;
 	width: 20%;
 }
@@ -187,6 +192,7 @@ html, body {
 	top: 20%;
 	left: 35%;
 	text-align: left;
+	/* font-size: 480%; */
 }
 
 .content .screen4 .cocktail-recipe {
