--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -10,7 +10,7 @@ html, body {
 	text-align: center;
 	margin: 0;
 	padding: 0;
-	/* cursor: none; */
+	cursor: none;
 	user-select: none;
 	font-family: Arial, Helvetica, sans-serif;
 }
