--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -145,7 +145,7 @@ html, body {
 
 .content .screen2 h1, .content .screen2a h1 {
 	position: absolute;
-	top: 30%;
+	top: 36%;
 	left: 35%;
 	text-align: left;
 }
@@ -207,6 +207,11 @@ html, body {
 	top: 40%;
 	left: 40%;
 	text-align: left;
+    height: 47%;
+    width: 58%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .content .screen4 .cocktail-recipe li, .content .screen3 .cocktail-recipe li {
